# UniLace

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  param_live.yaml
UniLace/: .gitignore  wget-log
UniLace/Assets/: ObiEditorSettings.asset  msgbrowser_settings.asset  uppermesh.asset
UniLace/Assets/Models/: StanSmith.asset  StanSmithUpper.asset  TableIkea.prefab  ikeatable.mtl  shoe softbody blueprint.asset  shoe.fbx  shoe_simplified.fbx  softbody surface blueprint.asset  sphere.fbx  stansmith.mtl  stansmith_simplified.fbx  stansmith_simplified.mtl  stansmith_simplified_sole.mtl  stansmith_simplified_upper.mtl  stansmith_upper.mtl  wood.material
UniLace/Assets/Resources/: StanSmithScannedUpper.asset  StanSmithScannedUpperTest.asset  Torus.prefab  eyelet distance field.asset  eyelet.prefab  torus.fbx
UniLace/Assets/Resources/Configs/: RGBShader.shader  RGBShader2.shader  depthCamera.shader  eyelets.json
UniLace/Assets/Resources/Materials/: Black.mat  BlueAglet.mat  BlueEyelets.mat  Carpet.mat  DeskObiMaterial.asset  Green.mat  IceObiMaterial.asset  Leather.mat  Marker.mat  Marker2.mat  Marker3.mat  New Material.mat  RedAglet.mat  RedEyelets.mat  Shoelace.mat  SurfaceObiMaterial.asset  Transparent.mat  White.mat  Wood.mat  logo.mat
UniLace/Assets/Resources/Models/: Eyelet.prefab  EyeletMesh.fbx  EyeletOld.prefab  aglet.prefab  agletLong.prefab  stansmith_scan_sole.mtl  stansmith_scan_upper.mtl
UniLace/Assets/Scripts/: AgletCollisionManager.cs  ArmController.cs  ArmControllerROS.cs  Demo.cs  FpsDisplay.cs  GripperController.cs  GripperControllerROS.cs  GroundTruthManager.cs  GroundTruthManagerROS.cs  Main.cs  MainGym.cs  ObiColliderCreator.cs  PID3D.cs  ParamManager.cs  ShoeManager.cs  ShoeUpperCollisionManager.cs  ShoeUpperSurfaceBlueprint.cs  ShoelaceManager.cs  Timer.cs  Utils.cs
UniLace/Assets/Settings/: High_PipelineAsset.asset  Low_PipelineAsset.asset  Medium_PipelineAsset.asset  Ultra_PipelineAsset.asset  Very High_PipelineAsset.asset  Very Low_PipelineAsset.asset
UniLace/Assets/Textures/: shoelace.mat
UniLace/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimelineSettings.asset
catkin_ws/src/uni_lace/: README.md
catkin_ws/src/uni_lace/robot_driver_unity/: CMakeLists.txt  package.xml
catkin_ws/src/uni_lace/robot_driver_unity/config/: params.yaml
catkin_ws/src/uni_lace/robot_driver_unity/launch/: unity_interface.launch
catkin_ws/src/uni_lace/robot_driver_unity/scripts/: joint_trajectory_action.py
catkin_ws/src/uni_lace/uni_lace/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/uni_lace/uni_lace/config/: param_default.yaml
catkin_ws/src/uni_lace/uni_lace/launch/: uni_lace_gym.launch  uni_lace_live.launch
catkin_ws/src/uni_lace/uni_lace/scripts/: uni_lace_live.py
catkin_ws/src/uni_lace/uni_lace/scripts/uni_lace/: uni_lace_gym_env.py  uni_lace_ros_wrapper.py  unity_param_manager.py  utils.py
catkin_ws/src/uni_lace/uni_lace_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/uni_lace/uni_lace_msgs/srv/: UniLaceInfoService.srv  UniLaceParamService.srv  UniLaceResetService.srv  UniLaceStepService.srv  UnityStateControllerService.srv
user_gym_policy/: param_demo.yaml  param_gym.yaml  uni_lace_demo.py  uni_lace_gym_simple_policy.py
(+625 files in other folders)
