<?xml version="1.0"?>
<package format="2">
  <name>uni_lace</name>
  <version>1.0.0</version>
  <author>Haining Luo</author>
  <description>The uni_lace package</description>
  <maintainer email="hl18@ic.ac.uk">haining</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>simple_message</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>urdf</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
